...
                value = newPlayerName,
                onValueChange = onValueChange,
                placeholder = { Text("Nom du nouveau joueur") },
                singleLine = true,
                modifier = Modifier
                    .weight(1f)
                    .testTag("TextField_AddPlayer")
                    .semantics { contentDescription = "Champ texte : entrer le nom du joueur" },
                //keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                colors = TextFieldDefaults.colors(
                    focusedContainerColor = NoName,
                    unfocusedContainerColor = NoName,
                ),
...
                onClick = {
                    viewModel.addPlayer(newPlayerName.text, maxPlayers)
                    onValueChange(TextFieldValue())
                },
                modifier = Modifier
                    .sizeIn(minWidth = 48.dp, minHeight = 48.dp)
                    .testTag("Button_AddPlayer")
                    .semantics { contentDescription = "Bouton : ajouter le joueur" },
                shape = CircleShape,
                colors = ButtonDefaults.buttonColors(
                    Secondary,
                    disabledBackgroundColor = Secondary.copy(alpha = 0.5f)
                ),
...
