...
                onClick = { navController.navigate("BeloteScreenGame") },
                height = 60,
                width=0.8f,
                fontSize = 20.sp,
                backgroundColor = NoName,
                modif = Modifier
                    .testTag("BeloteButton")
                    .semantics { contentDescription = "Lancer une partie de Belote" }
            )
            CustomButton(
                "Président",
                textColor = Primary,
                onClick = { navController.navigate("PresidentScreenGame") },
...
