...
            textColor = Color.White,
            backgroundColor = Secondary,
            on = players.size >= minPlayers,
            modif = Modifier
                .align(Alignment.BottomCenter)
                .imePadding()
                .testTag("PlayButton_SetGame")
                .semantics { contentDescription = "Lancer la partie de $gameName" }
        )
    }
}

